CSE-1064: extract the sic code comparison logic to class